# stock_screener_agent

./: .gitignore  README.md  flow.py  output.json  pyproject.toml  tool.py  toolhelpers.txt
backend/: dockerfile  requirements.txt
backend/app/: flow.py  main.py  toolhelpers.txt
frontend/: dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: agentApi.js
frontend/src/components/: FeedbackSteps.tsx  HistoryList.jsx  ResultsCard.jsx
frontend/src/pages/: StockDetail.jsx
